--- a/src/main/resources/templates/layout/LayoutPadrao.html
+++ b/src/main/resources/templates/layout/LayoutPadrao.html
@@ -12,11 +12,11 @@
 <title>Venda, Estoque, Financeiro</title>
 
 <link rel="stylesheet" type="text/css"
-	href="/vef/layout/stylesheets/vendors.min.css" />
+	th:href="@{/layout/stylesheets/vendors.min.css}" />
 <link rel="stylesheet" type="text/css"
-	href="/vef/layout/stylesheets/algaworks.min.css" />
+	th:href="@{/layout/stylesheets/algaworks.min.css}" />
 <link rel="stylesheet" type="text/css"
-	href="/vef/layout/stylesheets/application.css" />
+	th:href="@{/layout/stylesheets/application.css}" />
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -114,8 +114,8 @@
 	</div>
 
 
-	<script src="/vef/layout/javascripts/vendors.min.js"></script>
-	<script src="/vef/layout/javascripts/algaworks.min.js"></script>
+	<script th:src="@{/layout/javascripts/vendors.min.js}"></script>
+	<script th:src="@{/layout/javascripts/algaworks.min.js}"></script>
 
 </body>
 
