Criando cadastro de cliente e usuario

--- a/src/main/resources/templates/cerveja/cadastro-produto.html
+++ b/src/main/resources/templates/cerveja/cadastro-produto.html
@@ -211,7 +211,7 @@ function excluir() {
 	
 	<footer class="aw-layout-footer  js-content">
 		<div class="container-fluid">
-			<span class="aw-footer-disclaimer">&copy; 2016 AlgaWorks. Todos os direitos reservados.</span>
+			<span class="aw-footer-disclaimer">&copy; 2020 Flavio Henrique. Todos os direitos reservados.</span>
 		</div>
 	</footer>
 
