--- a/src/main/resources/templates/layout/LayoutPadrao.html
+++ b/src/main/resources/templates/layout/LayoutPadrao.html
@@ -17,6 +17,8 @@
 	th:href="@{/layout/stylesheets/algaworks.min.css}" />
 <link rel="stylesheet" type="text/css"
 	th:href="@{/layout/stylesheets/application.css}" />
+<link rel="stylesheet" type="text/css"
+	th:href="@{/stylesheets/vef.css}" />
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -34,7 +36,8 @@
 
 		<div th:replace="layout/fragments/menuLateral :: layout-sidebar"></div>
 
-		<section class="aw-layout-content  js-content" layout:fragment="conteudo"></section>
+		<section class="aw-layout-content  js-content"
+			layout:fragment="conteudo"></section>
 
 		<div th:replace="layout/fragments/footer :: footer"></div>
 	</div>
